# munin-plot

./: .eslintrc.yml  .gitignore  .travis.yml  MANIFEST.in  NEWS  README  README.md  eslint.config.mjs  munin.py  package-lock.json  package.json  setup.cfg  setup.py  tox.ini  web.py  webpack.config.js
.github/workflows/: test.yml
muninplot/: __init__.py  __main__.py  data.py  wsgi.py
src/: index.html  munin-plot.css  munin-plot.js  munin-plot.scss
static/: index.html
static/css/: munin-plot.css
static/js/: munin-plot.js
webpack-plugins/: zip-plugin.js
