[metadata]
name = munin-plot
version = 1.0
description = Alternative web front-end for Munin
long_description = file: README
author = Arthur de Jong
author_email = arthur@arthurdejong.org
url = https://arthurdejong.org/munin-plot/
license = MIT
license_file = COPYING
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Web Environment
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Internet :: WWW/HTTP :: WSGI :: Application
  Topic :: System :: Monitoring
  Topic :: System :: Networking :: Monitoring

[options]
packages = muninplot
python_requires = >=3

[options.package_data]
muninplot =
  static/*.*

[sdist]
owner=root
group=root

[flake8]
ignore =
  B902  # catching Exception is fine
  P103  # we have no external dependencies in setup.cfg
max-line-length = 120

[isort]
lines_after_imports = 2
multi_line_output = 4
